# RustNet

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: client.yml  server.yml
client/: .eslintrc.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.module.css  App.tsx  DrawableCanvas.tsx  NetworkDetails.tsx  index.tsx
server/: .gitignore  Cargo.toml  README.md
server/data/: README.md  download
server/src/: main.rs
server/src/neural_network/: connection.rs  data_loader.rs  mod.rs  network.rs  perceptron.rs  random_float_generator.rs  trainer.rs  training_data.rs
src/: main.rs
src/neural_network/: lib.rs  perceptron.rs
