[package]
name = "rust-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
nalgebra = "0.32.2"
indicatif = "0.17.3"
mnist = "0.5.0"
blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
flate2 = "1.0"
byteorder = "1.3"
